fixed picture squish

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -264,6 +264,13 @@ img,
   .myCard {
     margin: 0 auto 0 auto !important;
     width: 100% !important;
+    padding: 0 !important;
+  }
+  .row.tight {
+    padding: 0 !important;
+  }
+  .mobile-wrap {
+    padding: 0 15px 0 15px;
   }
 }
 .project-tight {
